# parametricus

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml  roadmap_parametricus.md
examples/: exemplo_caneca.py  exemplo_flange.py  exemplo_placa_v11.py  exemplo_porca.py
paracad/: __init__.py  document.py  mesher.py  parameters.py  sdf.py  sketch.py  viewer.py
parametricus/: __init__.py  _log.py  brep.py  constraints.py  document.py  io.py  library.py  materials.py  measure.py  mesher.py  parameters.py  sdf.py  sketch.py  types.py  viewer.py
parametricus/viewer_backend/: mpl.py  pyside6.py  pyvista.py  trimesh.py
parametricus/viewer_backend/engine_pyside6/: __init__.py  application.py  camera.py  geometry.py  interaction.py  math3d.py  mesh.py  renderer.py  shader.py  utils.py  viewer.py  window.py
parametricus/viewer_backend/engine_pyside6/shaders/: phong.frag  phong.vert
tests/: test_integration.py  test_nucleok.py  test_roadmap.py
